@@ -15,6 +15,8 @@ namespace Marvel {
 			{mvPythonDataType::IntList, "data", "RGBA format"},
 			{mvPythonDataType::Integer, "width"},
 			{mvPythonDataType::Integer, "height"},
+			{mvPythonDataType::KeywordOnly},
+			{mvPythonDataType::Integer, "format", "mvTEX_XXXX_XXXXX constants", "0"},
 		}, "Adds a texture.") });
 
 		parsers->insert({ "decrement_texture", mvPythonParser({
@@ -222,27 +224,89 @@ namespace Marvel {
 
 	PyObject* add_texture(PyObject* self, PyObject* args, PyObject* kwargs)
 	{
+		// TO DO, FIX THIS MESS
+
 		const char* name;
 		PyObject* data;
 		int width;
 		int height;
+		int format = 0;
 
 		if (!(*mvApp::GetApp()->getParsers())["add_texture"].parse(args, kwargs, __FUNCTION__, 
-			&name, &data, &width, &height))
+			&name, &data, &width, &height, &format))
 			return GetPyNone();
 
-		auto mdata = ToIntVect(data);
+		mvTextureFormat tformat = (mvTextureFormat)format;
 
-		std::vector<float> fdata;
-		for (auto& item : mdata)
-			fdata.push_back(item / 255.0f);
+		if (tformat == mvTextureFormat::RGBA_INT)
+		{
+			std::vector<int> mdata = ToIntVect(data);
 
-		if (mvApp::IsAppStarted())
-			mvTextureStorage::AddTexture(name, fdata.data(), width, height);
+			std::vector<float> fdata;
+			for (auto& item : mdata)
+				fdata.push_back(item / 255.0f);
 
-		else
-			mvApp::GetApp()->addTexture(name, fdata, width, height);
-		return GetPyNone();
+			if (mvApp::IsAppStarted())
+				mvTextureStorage::AddTexture(name, fdata.data(), width, height, tformat);
+
+			else
+				mvApp::GetApp()->addTexture(name, fdata, width, height, tformat);
+			return GetPyNone();
+		}
+
+		else if (tformat == mvTextureFormat::RGB_INT)
+		{
+			std::vector<int> mdata = ToIntVect(data);
+
+			std::vector<float> fdata;
+			for (int i = 0; i < mdata.size(); i = i + 3)
+			{
+				fdata.push_back(mdata[i] / 255.0f);
+				fdata.push_back(mdata[i+1] / 255.0f);
+				fdata.push_back(mdata[i+2] / 255.0f);
+				fdata.push_back(1.0f);
+			}
+
+			if (mvApp::IsAppStarted())
+				mvTextureStorage::AddTexture(name, fdata.data(), width, height, tformat);
+
+			else
+				mvApp::GetApp()->addTexture(name, fdata, width, height, tformat);
+			return GetPyNone();
+		}
+
+		else if (tformat == mvTextureFormat::RGBA_FLOAT)
+		{
+			std::vector<float> mdata = ToFloatVect(data);
+
+			if (mvApp::IsAppStarted())
+				mvTextureStorage::AddTexture(name, mdata.data(), width, height, tformat);
+
+			else
+				mvApp::GetApp()->addTexture(name, mdata, width, height, tformat);
+			return GetPyNone();
+		}
+
+		else if (tformat == mvTextureFormat::RGB_FLOAT)
+		{
+			std::vector<float> mdata = ToFloatVect(data);
+
+			std::vector<float> fdata;
+			for (int i = 0; i < mdata.size(); i = i + 3)
+			{
+				fdata.push_back(mdata[i]);
+				fdata.push_back(mdata[i + 1]);
+				fdata.push_back(mdata[i + 2]);
+				fdata.push_back(1.0f);
+			}
+
+			if (mvApp::IsAppStarted())
+				mvTextureStorage::AddTexture(name, fdata.data(), width, height, tformat);
+
+			else
+				mvApp::GetApp()->addTexture(name, fdata, width, height, tformat);
+			return GetPyNone();
+		}
 	}
 
 	PyObject* decrement_texture(PyObject* self, PyObject* args, PyObject* kwargs)
